--- a/source/sass/global/colors.scss
+++ b/source/sass/global/colors.scss
@@ -8,4 +8,5 @@ $basic-blue-light: #1D2E5B;
 $blue: #121936;
 $basic-grey: #EDEFF6;
 $special-blue-light: #DFE3F0;
-$special-blue-dark: #101D41
+$special-blue-dark: #101D41;
+$dark-grey: #E2E5F2;
