--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -6,6 +6,8 @@
 
   @media (min-width: $medium-width) {
     max-width: $medium-max-width;
+    padding-left: 75px;
+    padding-right: 75px;
   }
 
   @media (min-width: $large-width) {
