--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -1,5 +1,5 @@
 .feedback{
-  padding-top: 75px;
+  padding-top: 72px;
   padding-bottom: 45px;
 
   @media (min-width: $medium-width) {
@@ -10,6 +10,18 @@
     padding-top: 100px;
     padding-bottom: 100px;
   }
+}
+
+.feedback__caption{
+  @media (min-width: $medium-width) {
+    font-size: 45px;
+    line-height: 45px;
+  }
+}
+
+.feedback__authorize{
+  font-size: 28px;
+  line-height: 32px;
 }
 
 .feedback__list{
@@ -41,6 +53,11 @@
 
 .feedback__registration{
   text-align: center;
+  margin-top: 29px;
+
+  @media (min-width: $medium-width) {
+    margin-top: 65px;
+  }
 }
 
 .feedback__email{
@@ -56,6 +73,13 @@
     @include text(18px, bold, 18px, $special-grey);
     opacity: 0.3;
     padding-left: 25px
+  }
+
+  @media (min-width: $medium-width) {
+    &::placeholder{
+      font-size: 24px;
+      line-height: 24px;
+    }
   }
 
   &:hover::placeholder{
@@ -76,4 +100,20 @@
   @include text(16px, 300, 22px, #FFFFFF);
   letter-spacing: 0.01em;
   text-align: center;
+
+  @media (min-width: $medium-width) {
+    font-size: 28px;
+    line-height: 30px;
+  }
+}
+
+.feedback__send-email{
+  display: inline-block;
+}
+
+.feedback__details{
+  @media (min-width: $medium-width) {
+    font-size: 28px;
+    line-height: 28px;
+  }
 }
