--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -51,6 +51,7 @@
 
   @media (min-width: $large-width) {
     display: flex;
+    width: 50%;
   }
 }
 
@@ -78,13 +79,11 @@
 }
 
 .menu__authorization{
-  padding: 10px 15px 10px 15px;
-
-  @media (min-width: $large-width) {
-    padding: 25px 25px 25px 25px;
-  }
+  @include text(20px, normal, 20px, $basic-blue);
+  border-radius: 25px;
 }
 
 .menu__open-icon{
   @include icon();
 }
+
