--- a/source/sass/blocks/profile.scss
+++ b/source/sass/blocks/profile.scss
@@ -4,10 +4,13 @@
   // padding-top: 37px;
   padding-bottom: 38px;
   // padding-left: 24px;
+  @media (min-width: $medium-width) {
+    padding-bottom: 63px;
+  }
 }
 
 .profile__list{
-  margin-bottom: 46px;
+  margin-top: 46px;
   @media (min-width: $medium-width) {
     display: flex;
     flex-direction: column;
@@ -22,6 +25,11 @@
 
 .profile__business-tarifs{
   margin-left: 25px;
+
+  @media (min-width: $medium-width) {
+    margin-left: 0;
+    justify-content: flex-start;
+  }
 }
 
 .profile__rates{
@@ -31,7 +39,8 @@
   padding-right: 25px;
   padding-top: 25px;
   @media (min-width: $medium-width) {
-    top: auto;
+    top: 355px;
+    right: 85px;
   }
 
   @media (min-width: $large-width) {
@@ -43,6 +52,8 @@
   @media (min-width: $medium-width) {
     margin: 0 auto;
     padding-bottom: 35px;
+    font-size: 45px;
+    line-height: 45px;
   }
 
   @media (min-width: $large-width) {
@@ -52,6 +63,9 @@
 }
 
 .profile__show-tarifs{
+  display: flex;
+  align-items: center;
+  margin-top: 46px;
   &:hover{
     color: #132576;
     opacity: 0.7;
@@ -60,5 +74,76 @@
   &:active, &:focus{
     color: #132576;
     opacity: 0.3;
+  }
+}
+
+.profile__br{
+  @media (min-width: $medium-width) {
+    display: none;
+  }
+}
+
+.profile__information{
+  border-bottom: 1px solid #E1E3E9;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  &:not(:last-child){
+    margin-bottom: 13px;
+  }
+
+  @media (min-width: $medium-width) {
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    &:not(:last-child){
+      margin-bottom: 20px;
+    }
+  }
+}
+
+.profile__price{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row-reverse;
+  width: 100%;
+  align-items: center;
+  margin-bottom: -6px;
+
+  @media (min-width: $medium-width) {
+    flex-direction: row;
+    justify-content: flex-start;
+    margin-bottom: 0;
+  }
+}
+
+.profile__price-digital{
+  @media (min-width: $medium-width) {
+    margin-right: 22px;
+    font-size: 28px;
+    line-height: 28px;
+    padding-bottom: 25px;
+  }
+}
+
+.profile__tarif-icon{
+  display: none;
+
+  @media (min-width: $medium-width) {
+    display: block;
+  }
+}
+
+.profile__cost{
+  &::before,
+  &::after {
+    background-color: black;
+  }
+}
+
+.profile__tarifs-text{
+  @media (min-width: $medium-width) {
+    font-size: 20px;
+line-height: 20px;
   }
 }
