--- a/source/sass/blocks/user-info.scss
+++ b/source/sass/blocks/user-info.scss
@@ -55,7 +55,7 @@
   }
 }
 
-.user-info__avatar{
+.user-info__avatars{
   width: 45%;
   text-align: left;
   @media (min-width: $medium-width) and (max-width: $medium-max-width){
@@ -68,30 +68,21 @@
     position: absolute;
     top: 0;
     right: 0;
-    margin-right: 80px;
-    margin-top: -105px;
+    margin-right: 180px;
+    margin-top: -210px;
     width: auto;
   }
 }
 
-.user-info__avatar--small{
+.user-info__avatar{
   width: 100px;
   height: 100px;
-  @media (min-width: $medium-width) {
-    display: none;
-  }
-}
-
-.user-info__avatar--medium{
-  display: none;
   @media (min-width: $medium-width){
-    display: block;
     width: 94px;
     height: 94px;
   }
 
   @media (min-width: $large-width){
-    display: block;
     width: 190px;
     height: 190px;
   }
@@ -108,7 +99,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    margin-right: 160px;
+    margin-right: 190px;
     margin-top: -20px;
     width: auto;
   }
