--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -78,6 +78,8 @@
 }
 
 .contacts__build-way{
+  display: flex;
+  justify-content: space-between;
   height: 62px;
   width: 100%;
   border: 3px solid #192144;
