--- a/source/sass/blocks/plan-list.scss
+++ b/source/sass/blocks/plan-list.scss
@@ -30,9 +30,16 @@
 }
 
 .plan-list__change-text{
-  @include text(14px, bold, 14px, #000000);
+  @include text(14px, 500, 14px, #000000);
   letter-spacing: 0.03em;
   opacity: 0.3;
+  text-transform: uppercase;
+
+  @media (min-width: $medium-width) {
+    font-size: 20px;
+    line-height: 20px;
+    letter-spacing: 0.1em;
+  }
 }
 
 .plan-list__details{
@@ -49,6 +56,7 @@
 
   @media (min-width: $large-width) {
     border-top: none;
+    width: 50%;
   }
 }
 
@@ -60,10 +68,17 @@
     flex-direction: row;
     margin-top: 0;
   }
+
+  // @media (min-width: $large-width) {
+  //   // margin-right: 116px;
+  //   width: 50%;
+  // }
 }
 
 .plan-list__change{
+  display: block;
   margin-top: 24px;
+  align-items: flex-start;
 
   @media (min-width: $medium-width) {
     flex-direction: row;
