--- a/source/sass/blocks/profile.scss
+++ b/source/sass/blocks/profile.scss
@@ -16,11 +16,16 @@
     flex-direction: column;
     flex-wrap: nowrap;
   }
+
+  @media (min-width: $large-width) {
+    width: 75%;
+  }
 }
 
 .profile__header{
   display: flex;
   justify-content: space-between;
+  padding-top: 53px;
 }
 
 .profile__business-tarifs{
@@ -30,25 +35,33 @@
     margin-left: 0;
     justify-content: flex-start;
   }
+
+  @media (min-width: $large-width) {
+    margin-left: 180px;
+  }
 }
 
 .profile__rates{
   position: absolute;
-  top: 0;
+  top: -140px;
   right: 0;
-  padding-right: 25px;
-  padding-top: 25px;
   @media (min-width: $medium-width) {
-    top: 355px;
-    right: 85px;
+    top: 245px;
+    left: 570px;
   }
 
   @media (min-width: $large-width) {
     top: 50%;
+    left: 1100px;
   }
 }
 
 .profile__caption{
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+
   @media (min-width: $medium-width) {
     margin: 0 auto;
     padding-bottom: 35px;
@@ -118,6 +131,8 @@
 }
 
 .profile__price-digital{
+  position: relative;
+
   @media (min-width: $medium-width) {
     margin-right: 22px;
     font-size: 28px;
@@ -146,4 +161,8 @@
     font-size: 20px;
 line-height: 20px;
   }
+}
+
+.profile__consts{
+  position: relative;
 }
