--- a/source/sass/blocks/user-info.scss
+++ b/source/sass/blocks/user-info.scss
@@ -90,8 +90,10 @@
 
 .user-info__change-photo{
   width: 100%;
+  height: 40px;
   @media (min-width: $medium-width) and (max-width: $medium-max-width){
     order: 4;
+    height: 60px;
   }
 
   @media (min-width: $large-width){
@@ -99,9 +101,10 @@
     position: absolute;
     top: 0;
     right: 0;
-    margin-right: 190px;
+    margin-right: 177px;
     margin-top: -20px;
-    width: auto;
+    width: 190px;
+    height: 47px;
   }
 
   &:hover{
@@ -166,12 +169,19 @@
 }
 
 .user-info__legend{
+  @include text(16px, bold, 18px, $basic-blue-light);
+  text-transform: uppercase;
+
   @media (min-width: $medium-width) {
     position: absolute;
     bottom: 0;
     left: 50%;
     transform: translate(-50%, 50%);
     padding: 0 5px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 20px;
+    letter-spacing: 0.1em;
   }
 }
 
