--- a/source/sass/blocks/user-plans.scss
+++ b/source/sass/blocks/user-plans.scss
@@ -5,3 +5,12 @@
 .user-plans__list{
   margin-top: 29px;
 }
+
+.user-plans__caption{
+  @include text(24px, bold, 24px, $basic-blue-light);
+
+  @media (min-width: $medium-width) {
+    font-size: 36px;
+    line-height: 36px;
+  }
+}
