--- a/source/sass/blocks/companions.scss
+++ b/source/sass/blocks/companions.scss
@@ -4,6 +4,18 @@
   flex-direction: column;
 }
 
+.companions__container{
+  padding-bottom: 116px;
+
+  @media (min-width: $medium-width) {
+    padding-bottom: 132px;
+  }
+
+  @media (min-width: $large-width) {
+    padding-bottom: 144px;
+  }
+}
+
 .companions__navigation-container{
   display: flex;
   justify-content: space-between;
