--- a/source/sass/global/colors.scss
+++ b/source/sass/global/colors.scss
@@ -10,3 +10,5 @@ $basic-grey: #EDEFF6;
 $special-blue-light: #DFE3F0;
 $special-blue-dark: #101D41;
 $dark-grey: #E2E5F2;
+$special-dark-grey: #CBCED9;
+$special-light-grey: #959BB2;
