--- a/source/sass/blocks/country-list.scss
+++ b/source/sass/blocks/country-list.scss
@@ -1,9 +1,9 @@
 .country-list{
   padding-inline-start: 0;
+  list-style-type: none;
 }
 
 .country-list__item{
-  display: inline-block;
   @include text(16px, bold, 16px, $basic-blue-light);
 
   @media (min-width: $medium-width) {
