--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -3,6 +3,9 @@
   background-color: #ffffff;
   padding-top: 35px;
   padding-bottom: 25px;
+  margin-top: -70px;
+  border-top-left-radius: 80px;
+  border-top-right-radius: 80px;
   @media (min-width: $medium-width) {
     padding: 50px 0px;
   }
