--- a/source/sass/blocks/user-info.scss
+++ b/source/sass/blocks/user-info.scss
@@ -17,21 +17,32 @@
 .user-info__plans{
   padding-top: 28px;
   padding-bottom: 30px;
+  border-top-left-radius: 40px;
+  border-top-right-radius: 40px;
 }
 
 .user-info__general{
-  padding-top: 20px;
-  padding-bottom: 34px;
+  padding-top: 136px;
+  padding-bottom: 59px;
 
   @media (min-width: $medium-width) {
     position: relative;
+    padding-bottom: 73px;
+  }
+
+  @media (min-width: $large-width) {
+    position: relative;
+    padding-bottom: 90px;
   }
 }
 
 .user-info__add-plans{
   background-color: #D4D9EB;
   padding-top: 30px;
-  padding-bottom: 43px;
+  padding-bottom: 113px;
+  margin-top: -25px;
+  border-top-left-radius: 40px;
+  border-top-right-radius: 40px;
 }
 
 
@@ -49,7 +60,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    margin-top: -150px;
+    margin-top: -225px;
     margin-right: 390px;
     width: auto;
   }
@@ -69,7 +80,7 @@
     top: 0;
     right: 0;
     margin-right: 180px;
-    margin-top: -210px;
+    margin-top: -255px;
     width: auto;
   }
 }
@@ -91,6 +102,10 @@
 .user-info__change-photo{
   width: 100%;
   height: 40px;
+  @media (min-width: $medium-width) {
+    border-radius: 10px;
+  }
+
   @media (min-width: $medium-width) and (max-width: $medium-max-width){
     order: 4;
     height: 60px;
@@ -102,7 +117,7 @@
     top: 0;
     right: 0;
     margin-right: 177px;
-    margin-top: -20px;
+    margin-top: -65px;
     width: 190px;
     height: 47px;
   }
@@ -121,7 +136,7 @@
   width: 100%;
   margin-top: 30px;
   border-radius: 10px;
-  border: 1px solid #CBCED9;
+  border: 1px solid $special-dark-grey;
 
   @media (min-width: $medium-width) and (max-width: $medium-max-width){
     order: 5;
@@ -130,7 +145,7 @@
   @media (min-width: $large-width){
     order: 4;
     width: 45%;
-    margin-top: 75px;
+    margin-top: 35px;
     height: 105px;
   }
 
@@ -141,7 +156,7 @@
 
   &:active, &:focus{
     color: $special-grey;
-    border: 1px solid #CBCED9;
+    border: 1px solid $special-dark-grey;
     box-sizing: border-box;
     border-radius: 10px;
   }
@@ -150,7 +165,7 @@
 .user-info__transport{
   width: 100%;
   margin-top: 25px;
-  border: 1px solid #CBCED9;
+  border: 1px solid $special-dark-grey;
   border-radius: 10px;
 
   @media (min-width: $medium-width) and (max-width: $medium-max-width){
@@ -164,7 +179,7 @@
     width: 45%;
     height: 105px;
 
-    margin-top: 75px;
+    margin-top: 35px;
   }
 }
 
