--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,8 +4,11 @@
 @import "global/sizes.scss";
 
 //Blocks
+@import "blocks/alphabet";
 @import "blocks/icon.scss";
 @import "blocks/button.scss";
+@import "blocks/country-list.scss";
+@import "blocks/select.scss";
 @import "blocks/tooltip.scss";
 @import "blocks/container.scss";
 @import "blocks/icon-list.scss";
@@ -14,6 +17,7 @@
 @import "blocks/boolean.scss";
 @import "blocks/buttons-block.scss";
 @import "blocks/buttons-line.scss";
+@import "blocks/calendar.scss";
 @import "blocks/card-list.scss";
 @import "blocks/choose-companion.scss";
 @import "blocks/companions-container.scss";
@@ -25,9 +29,7 @@
 @import "blocks/continents-list.scss";
 @import "blocks/countries.scss";
 @import "blocks/country-description-list.scss";
-@import "blocks/country-list.scss";
 @import "blocks/dataset.scss";
-@import "blocks/date.scss";
 @import "blocks/details-list.scss";
 @import "blocks/dropdown-multiple-select.scss";
 @import "blocks/feedback.scss";
@@ -50,11 +52,9 @@
 @import "blocks/profile.scss";
 @import "blocks/promo.scss";
 @import "blocks/select-input-list.scss";
-@import "blocks/select.scss";
 @import "blocks/site-list.scss";
 @import "blocks/slider-toggles.scss";
 @import "blocks/social-list.scss";
-@import "blocks/spinner.scss";
 @import "blocks/step-list.scss";
 @import "blocks/transport-list.scss";
 @import "blocks/user-info.scss";
