--- a/source/sass/blocks/filter.scss
+++ b/source/sass/blocks/filter.scss
@@ -2,6 +2,8 @@
   background-color: $dark-grey;
   padding-top: 90px;
   padding-bottom: 15px;
+  border-bottom-left-radius: 40px;
+  border-bottom-right-radius: 40px;
 }
 
 .filter__header{
