--- a/source/sass/blocks/users.scss
+++ b/source/sass/blocks/users.scss
@@ -71,6 +71,10 @@ padding-bottom: 25px;
   display: flex;
 }
 
+.users__background{
+  display: none;
+}
+
 .users__card-list{
   position: relative;
   margin-bottom: 10px;
