--- a/source/sass/blocks/choose-companion.scss
+++ b/source/sass/blocks/choose-companion.scss
@@ -3,11 +3,10 @@
   padding-top: 26px;
   padding-bottom: 22px;
   border-radius: 20px;
-  max-width: 625px;
 
   @media (min-width: $medium-width) {
     // max-height: 550px;
-    max-width: 100%;
+    // max-width: 100%;
   }
 
   @media (min-width: $large-width) {
