--- a/source/sass/blocks/country-description-list.scss
+++ b/source/sass/blocks/country-description-list.scss
@@ -3,6 +3,11 @@
 
   @media (min-width: $medium-width) {
     width: 90%;
+    margin-top: 27px;
+  }
+
+  @media (min-width: $large-width) {
+    margin-top: 75px;
   }
 }
 
@@ -81,6 +86,6 @@
 
   @media (min-width: $medium-width) {
     width: 70px;
-  height: 47px;
+    height: 47px;
   }
 }
