--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,13 +1,16 @@
 .page-footer{
+  position: absolute;
+  width: 100%;
   text-align: center;
   background-color: #ffffff;
   padding-top: 35px;
   padding-bottom: 25px;
-  margin-top: -70px;
-  border-top-left-radius: 80px;
-  border-top-right-radius: 80px;
+  margin-top: -100px;
+  border-top-left-radius: 40px;
+  border-top-right-radius: 40px;
   @media (min-width: $medium-width) {
     padding: 50px 0px;
+    margin-top: -55px;
   }
 }
 
