--- a/source/sass/blocks/profile.scss
+++ b/source/sass/blocks/profile.scss
@@ -4,8 +4,13 @@
   // padding-top: 37px;
   padding-bottom: 38px;
   // padding-left: 24px;
+  border-bottom-left-radius: 40px;
+  border-bottom-right-radius: 40px;
+
   @media (min-width: $medium-width) {
     padding-bottom: 63px;
+    border-bottom-left-radius: 80px;
+    border-bottom-right-radius: 80px;
   }
 }
 
@@ -38,6 +43,15 @@
 
   @media (min-width: $large-width) {
     margin-left: 180px;
+  }
+
+  &:hover{
+    background: none;
+    opacity: 0.7;
+  }
+
+  &:active, &:focus{
+    background: none;
   }
 }
 
