--- a/source/sass/blocks/step-list.scss
+++ b/source/sass/blocks/step-list.scss
@@ -45,6 +45,14 @@
 .step-list__header{
   display: flex;
   justify-content: space-between;
+  @media (min-width: $medium-width) {
+    border-bottom: 1px solid #E1E3E9;
+    padding-bottom: 33px;
+  }
+
+  @media (min-width: $large-width) {
+    padding-bottom: 55px;
+  }
 }
 
 .step-list__header-text{
@@ -92,6 +100,14 @@
 
 .step-list__sub-list{
   margin-top: 21px;
+
+  @media (min-width: $medium-width) {
+    margin-top: 42px;
+  }
+
+  @media (min-width: $large-width) {
+    margin-top: 62px;
+  }
 }
 
 .step-list__buttons{
@@ -143,7 +159,6 @@
 .step-list__trip-data--companions{
   @media (min-width: $medium-width) {
     order: 3;
-    border-top: 1px solid #E1E3E9;
     padding-top: 26px;
   }
 }
@@ -165,6 +180,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  min-width: 220px;
   @include text(16px, 500, 16px, $basic-blue-light);
   text-transform: uppercase;
   letter-spacing: 0.09em;
