--- a/source/sass/blocks/tooltip.scss
+++ b/source/sass/blocks/tooltip.scss
@@ -4,6 +4,7 @@
   border: 1px solid #000000;
   background-color: $special-blue-dark;
   background: none repeat scroll 0 0 $special-blue-dark;
+  z-index: 1;
 
   @media (min-width: $medium-width) {
     padding: 15px;
