--- a/source/sass/blocks/user-info.scss
+++ b/source/sass/blocks/user-info.scss
@@ -19,6 +19,10 @@
   padding-bottom: 30px;
   border-top-left-radius: 40px;
   border-top-right-radius: 40px;
+
+  @media (min-width: $medium-width) {
+    padding-bottom: 76px;
+  }
 }
 
 .user-info__general{
@@ -112,14 +116,7 @@
   }
 
   @media (min-width: $large-width){
-    order: 3;
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin-right: 177px;
-    margin-top: -65px;
-    width: 190px;
-    height: 47px;
+    display: none;
   }
 
   &:hover{
@@ -129,6 +126,22 @@
   &:active, &:focus{
     background-color: $special-blue-light;
     opacity: 0.3;
+  }
+}
+
+.user-info__change-photo--large{
+  display: none;
+
+  @media (min-width: $large-width) {
+    display: block;
+    order: 3;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-right: 177px;
+    margin-top: -65px;
+    width: 190px;
+    height: 47px;
   }
 }
 
@@ -186,6 +199,7 @@
 .user-info__legend{
   @include text(16px, bold, 18px, $basic-blue-light);
   text-transform: uppercase;
+  background-color: $basic-grey;
 
   @media (min-width: $medium-width) {
     position: absolute;
@@ -209,4 +223,9 @@
 .user-info__tag-input{
   border: none;
   background: none;
+}
+
+.user-info__level-icon{
+  display: block;
+  margin: 0 0 0 auto;
 }
