modified header styles

--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -39,6 +39,8 @@
   @media (min-width: $large-width) {
     display: block;
     fill: #ffffff;
+    margin-left: 40px;
+    margin-right: 45px;
   }
 }
 
