--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,14 +1,20 @@
 .page-header{
-  padding-top: 19px;
   padding-bottom: 12px;
   position: relative;
   background-color: $basic-blue;
   margin-bottom: -70px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .page-header--border-radius{
-  border-bottom-left-radius: 80px;
-  border-bottom-right-radius: 80px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  @media (min-width: $medium-width) {
+    border-bottom-left-radius: 60px;
+    border-bottom-right-radius: 60px;
+  }
 }
 
 .page-header--height{
@@ -23,6 +29,18 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 2;
+  margin: 0;
+  margin-top: 20px;
+
+  @media (min-width: $medium-width) {
+    margin-top: 40px;
+  }
+
+  @media (min-width: $large-width) {
+    margin: 0 auto;
+    margin-top: 46px;
+  }
 }
 
 .page-header--menu-opened{
@@ -57,10 +75,20 @@
 
 .page-header__caption{
   @include text(36px, bold, 36px, #ffffff);
+  margin: 0;
+  padding-left: 25px;
+  padding-bottom: 12px;
 
   @media (min-width: $medium-width) {
     font-size: 60px;
     line-height: 60px;
+    padding-left: 75px;
+    padding-bottom: 66px;
+  }
+
+  @media (min-width: $large-width) {
+    padding-left: 124px;
+    padding-bottom: 68px;
   }
 }
 
@@ -105,5 +133,35 @@
 
   &:active, &:focus{
     opacity: 0.3;
+  }
+}
+
+.page-header__underline{
+  position: absolute;
+  fill: #FF8D30;
+  bottom: -4px;
+  left: 25px;
+  width: 190px;
+
+  @media (min-width: $medium-width) {
+    left: 74px;
+    width: 320px;
+  }
+
+  @media (min-width: $large-width) {
+    left: 126px;
+  }
+}
+
+.page-header_underline--directions{
+  width: 220px;
+
+  @media (min-width: $medium-width) {
+    left: 74px;
+    width: 360px;
+  }
+
+  @media (min-width: $large-width) {
+    left: 126px;
   }
 }
