--- a/source/sass/blocks/users.scss
+++ b/source/sass/blocks/users.scss
@@ -127,6 +127,11 @@ padding-bottom: 25px;
   position: absolute;
   margin-left: -30px;
   margin-top: -5px;
+
+  @media (min-width: $medium-width) {
+    margin-left: -69px;
+    margin-top: 5px;
+  }
 }
 
 .users__plain-1{
@@ -158,6 +163,11 @@ padding-bottom: 25px;
   position: absolute;
   margin-left: -40px;
   margin-top: -5px;
+
+  @media (min-width: $medium-width) {
+    margin-left: -83px;
+    margin-top: 5px;
+  }
 }
 
 .users__bus-1{
@@ -188,6 +198,11 @@ padding-bottom: 25px;
   position: absolute;
   margin-left: -20px;
   margin-top: -5px;
+
+  @media (min-width: $medium-width) {
+    margin-left: -60px;
+    margin-top: 5px;
+  }
 }
 
 .users__bicycle-1{
@@ -218,6 +233,11 @@ padding-bottom: 25px;
   position: absolute;
   margin-left: -10px;
   margin-top: -5px;
+
+  @media (min-width: $medium-width) {
+    margin-left: -45px;
+    margin-top: 5px;
+  }
 }
 
 .users__walk-1{
